--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -42,6 +42,22 @@ In an ideal world, we would extract a human genome in the form of DNA from a cel
 
 To do this, we first need to combine shorter reads into longer sequences called \textit{contigs}. We then look for overlaps between contigs and use that information to create a graph where each node represents a read, and each edge represents an overlap between reads. An overlap can be described as a match between two contigs' \textit{ends}, that is, the contig's prefix (start) and suffix (end). The length of this overlap can indicate the strength of the connection. We are then tasked with finding the longest possible path on this graph to connect the individual contigs and form a complete genome.
 
+\subsection{File Formats}
+
+As a specific subfield that combines computer science and genetics, bioinformatics used multiple file formats that are specific to it. Mostly used for storing and representing genomic data, they offer us an easier way to work with such data, as well as modify it. In the following sections, we will briefly describe these file formats, as well as state their usage in this project.
+
+\subsubsection{FASTA \& FASTQ}
+
+The most common file format encountered while working with genomic data is the FASTA format, designated by its .fasta or .fa file extension. It is a text-based format for storing nucleotide sequences. Base pairs of amino acids are stored using letters (A - adenine, C - cytosine, G - guanine, T - thymine) in form of a sequence. Every sequence starts with a description line, which is designated with a ">" symbol. It can contain various information, such as sequence name, sequence length, sequence statistics, etc. In our case, for the yeast gene data, it specified the species and chromosome to which the sequences belonged to. After generating the reads (\ref{dataset}), it contained data such as the read number, strain, position on the chromosome, length and the chromosome to which it belonged to, as well as if its a mutated read or not. Sometimes, we may also encounter a FASTQ file. It is the same as a FASTA file, but with added sequence quality score information.
+
+\subsubsection{CSV}
+
+After generating various information about our a dataset, we would store it in a CSV (comma separated values) file. That way, it could be easily read by some of the tools we used. A CSV file can be thought of as a table, where values in a row are separated with a comma sign. The file starts with a header with column names that are also separated with commas.
+
+The main reason we use the CSV file format is because of the Raven sequencer outputting a CSV file to store overlap data. After generating the desired sequences, their information would be stored in the file in the following way. We would start in a descending order of read name. Every line with an even index represents a read, while an odd line represents a \textit{virtual} read. Virtual reads are simply reverse complements of the original reads.
+
+\subsubsection{GFA}
+
 \section{Thesis Task}
 
 The task we are presented with here is slightly different compared to standard genome sequencing. Instead of just finding a path through the graph and assembling the genome, we instead need to remove edges in the graph that connect contigs belonging to separate parents. By doing this, we are essentially separating the two haplotypes that constitute a genome.
@@ -111,10 +127,11 @@ Here, $W_{right}$ is one of the two network weight matrices, $h$ is a node featu
 It differs from the original GAT only in the way $e_{ij}^{(l)}$ is calculated. Instead of using a single weight matrix $W$, we use two separate ones in the form of $W_{right}$ and $W_{left}$, giving the network more parameters and learning power.
 
 \chapter{Dataset}
+\label{dataset}
 
 When it comes to deep learning, data can often take a central role in determining the final outcome of the project. Although carefully crafting a predictive model is important, data quality can have a large impact on the model's performance. In this thesis, in order to train our model, we artificially created a dataset based on the brewer's yeast (\textit{Saccharomyces cerevisiae}) genome. For most experimentation purposes, this dataset was only created using the first chromosome of the genome, as using the entire genome required the creation of a much larger dataset that would have significantly slowed down the training and testing process of different models. This larger dataset would have been necessary due to the fact that using the same number of reads for a larger number of chromosomes than just one would essentially dilute our available information for each chromosome, making our models difficult to train. This can be mitigated by the fact that different chromosomes are somewhat similar, as we will see in further experiments. Nevertheless, using only one chromosome proved effective enough for testing out different models, as we will see later in the results section.
 
-To generate the dataset, we used a multi-step process. The yeast genome was stored in a simple FASTA file with the chromosomes written down in order. In the first step, we would extract the first chromosome from the FASTA. In the next step, in order to simulate a fragmented chromosome like it was obtained in the process of sequencing, we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package with the \texttt{generate} option. By setting the \texttt{-nreads} flag, we chose the number of reads to generate and using the \texttt{-distribution} flag, we chose the desired distribution for the reads (here set to \texttt{pacbio-hifi}). After this was done, we ended up with a file filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser} to mutate these reads into new ones of the same size. If the original simulated reads were the mother's reads, these mutated ones could be thought of as the father's reads. We combined them into a single file by simply concatenating them, and we were now ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
+To generate the dataset, we used a multi-step process. The yeast genome was stored in a simple FASTA file with the chromosomes written down in order. In the first step, we would simply extract the first chromosome from the FASTA file. In the next step, in order to simulate a fragmented chromosome like if it was obtained in the process of sequencing, we needed to generate artificial reads from the chromosome. This was done using the \texttt{seqrequester}\footnote{https://github.com/marbl/seqrequester} package and its \texttt{generate} option for generating reads. By setting the \texttt{-nreads} flag to the desired number, we could specify the number of reads the program would generate, and using the \texttt{-distribution} flag, we could choose the desired distribution for the reads (in our case \texttt{pacbio-hifi}). After this was done, we ended up with a file filled with simulated reads. We used a small C++ program\footnote{Courtesy of R. Vaser} to mutate these reads into new ones of the same length with a mutation frequency of 0.01, meaning that every 100 base pairs, a base pair would get mutated into its complement base pair. Now, if the original simulated reads represented the mother's reads, these mutated ones could be thought of as the father's reads. Lastly, we combined them into a single file by simply concatenating them, and we were now ready for the final sequencing process where we would obtain contigs and their overlaps which we could use for training our model.
 
 We found that generating 5000 - 10 000 reads gave satisfactory results in combination with the Raven sequencer (\cite{Vaser}). This is due to the fact that Raven's \texttt{filter} option reduces the number of edges in the graph if a smaller value for the option is specified. While setting the option to 0.99, and using the previously mentioned number of reads, Raven will generate an appropriate number of nodes and edges for training. Setting it to anything lower would create datasets too small for training. Unfortunately, this very low filter value also meant that the overlaps between our contigs were also a minimum of 99\%, making them less of a candidate for usage as edge features.
 
@@ -124,20 +141,20 @@ After the Raven sequencer is done with the sequencing process, it outputs two fi
 
 \section{Technology Stack}
 
-The main functionality for this Thesis was achieved using two Python libraries PyTorch and DGL. PyTorch\footnote{https://pytorch.org/} probably needs no introduction. It is currently the most popular deep learning library used by millions due to its simplicity and versatility. It is free and open source and maintained by Facebook's AI Research lab. In this project, it was used for its \textit{tensor} data structure, its implementation of nonlinearities such as the ReLU and ELU, loss functions such as cross entropy loss and others. It is also the main underlying architecture for all of our deep learning models which DGL is built on.
+The main programming language used for this thesis was Python\footnote{https://www.python.org/}, specifically, Python version 3.9. Aside from this, we also used Bash\footnote{https://www.gnu.org/software/bash/} in order to build some scripts to speed up repetitive tasks. Most of the core functionalities of this project were implemented using two Python libraries: PyTorch and DGL. PyTorch\footnote{https://pytorch.org/} probably needs no introduction. It is currently one of the most popular deep learning library used by millions due to its simplicity and versatility\footnote{https://statisticsanddata.org/data/most-popular-machine-learning-libraries/}. It is free and open source and maintained by Facebook's AI Research lab. In this project, it was mostly used for its \textit{tensor} data structure, its implementation of nonlinearities such as the ReLU and ELU, and loss functions such as cross entropy loss and others. It is also used as the underlying architecture for the deep learning layers we used, which will be described in the next paragraph.
 
-The Deep Graph Library\footnote{https://www.dgl.ai/} (DGL) (\cite{DGL}) is an free and open source deep learning library primarily aimed at graph neural networks. It is maintained by a diverse team of contributors mostly from Amazon Web Services. Here, we used it for the creation of graphs from the yeast dataset that were used for learning ans its implementation of all the GNN layers we used. It is built upon multiple available deep learning libraries, but we used the version implemented on PyTorch.
+The Deep Graph Library\footnote{https://www.dgl.ai/} (DGL) (\cite{DGL}) is an free and open source deep learning library primarily aimed at the graph neural networks domain. It is maintained by a diverse team of contributors, most of the stemming from the Amazon Web Services team. In this project, it proved itself as a crucial addition to the list of used tools due to its numerous graph oriented functions. We used it mainly for the following features. Firstly, it allowed us to effortlessly and efficiently create graphs from our yeast dataset that were then used for training our models. Secondly, its numerous implemented GNN layers were easy to set up and test out, allowing us to more quickly find the best model for our data. Lastly, due to it being built on the previously mentioned PyTorch library, it had seamless integration with it and could use many of PyTorch's built in functions to help us in training.
 
 Aside from this, we also used a few other libraries to help us in some tasks. We will here shortly list them and describe them.
 
 \begin{itemize}
-	\item NumPy\footnote{https://numpy.org/} - useful for its large arrays
+	\item NumPy\footnote{https://numpy.org/} - a popular Python library focused on efficient and easy mathematical calculations. We mostly used it for its implementation of large arrays
 
-	\item Pandas\footnote{https://pandas.pydata.org/} - for its CSV saving and loading capabilities
+	\item Pandas\footnote{https://pandas.pydata.org/} - a Python data science library with numerous data oriented features. We used it for its CSV saving and loading capabilities
 
-	\item Scikit-learn\footnote{https://scikit-learn.org/stable/} - for its performance metrics such as F1 score
+	\item Scikit-learn\footnote{https://scikit-learn.org/stable/} - the most popular machine learning library for Python. We used its easy to use performance metrics, such as F1 score and accuracy
 
-	\item TensorBoard\footnote{https://www.tensorflow.org/tensorboard} - used for visualizing our training process
+	\item TensorBoard\footnote{https://www.tensorflow.org/tensorboard} - a Python library used for easy visualization of the training process and its metrics
 \end{itemize}
 
 \section{Structure}
